# PG-3DGS

./: LICENSE  NOTICE  README.md  requirements-cu124.txt  requirements.txt  train.py
code/eulerian-fluid/: pyproject.toml
code/eulerian-fluid/eulerian_fluid/: euler_checkpoint.py  fluid_logic_3d.py  fluid_visualization.py  losses.py  pcg_pressure_solve.py  utils.py
code/torch-splatting/: LICENSE  pyproject.toml
code/torch-splatting/gaussian_splatting/: gauss_model.py  gauss_render.py  trainer.py
code/torch-splatting/gaussian_splatting/utils/: loss_utils.py  point_utils.py
experiment_profiles/: default_settings.json  experiment_profile_plane.json  experiment_profile_teapot.json
