[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-splatting"         # any normalized name; not the import name
version = "0.0.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaussian_splatting"]   # match top-level package
exclude = [
    "tests*", 
    "docs*", 
    "build*", 
    "dist*", 
    "*.egg-info*", 
    "__pycache__*"
]